samples/_failures_safe/1761297005_71a790_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6533832b.c: In function ‘main’:
./samples/SAFE/__tmp_6533832b.c:182:25: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  182 |     TokenList* tokens = token
      |                         ^~~~~
      |                         Token
./samples/SAFE/__tmp_6533832b.c:182:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6533832b.c:182:5: error: expected ‘,’ or ‘;’ at end of input
  182 |     TokenList* tokens = token
      |     ^~~~~~~~~
./samples/SAFE/__tmp_6533832b.c:182:5: error: expected declaration or statement at end of input
